[package]
name = "zarthus_env_logger"
version = "0.3.0"
edition = "2021"
keywords = ["logging", "env_logger", "zarthus"]
authors = ["Zarthus <zarthus@liefland.net"]
license = "MIT OR Apache-2.0"
description = "A very opinionated logger"
repository = "https://github.com/Zarthus/env_logger"
readme = "README.md"
publish = true

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"

[dependencies.chrono]
version = "0.4.37"
optional = true

[dependencies.time]
version = "0.3.31"
features = ["macros", "formatting", "parsing"]
optional = true

[features]
default = ["chrono"]
